# cloudcomputingensae

./: First tests.ipynb  README.md  pyproject.toml  setup.py  spark_notebook.ipynb
notebooks/: Algorithms from the paper (numpy).ipynb  Algorithms from the paper.ipynb  Applications.ipynb  First tests.ipynb  Spark_notebook_DIMSUM.ipynb  Spark_notebook_DIMSUM_benchmark_version.ipynb  Tests on matrix size.ipynb  Untitled.ipynb  spark_notebook.ipynb  spark_notebook_DIMSUM.ipynb
src/: helper.py  methods_py.py
src/dimsum/utils/: dimsum.py
