[tool.poetry]
name = "dimsum"
version = "0.1.0"
description = "DIMSUM spark algo"
authors = ["beafarah","cthiounn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"